# lanhu-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  LanhuMCP-CLI.spec  LanhuMCP-GUI.spec  LanhuMCP-onefile.spec  LanhuMCP.spec  PACKAGING.md  README.md  README_EN.md  _check_syntax.py  build-err.txt  build.bat  build.md  build.sh  build_full.bat  build_onefile.bat  config.example.env  cookie.json  create_app.sh  easy-install.bat  easy-install.sh  hook_fastmcp_metadata.py  hook_flet_no_pip.py  hook_tcl_find_executable.py  installer.nsi  lanhu_login_helper.py  lanhu_mcp.spec  lanhu_mcp_all.py  lanhu_mcp_all.spec  lanhu_mcp_app.py  lanhu_mcp_gui.py  lanhu_mcp_gui_new.py  lanhu_mcp_server.py  pyproject.toml  quickstart.bat  quickstart.sh  requirements.txt  (+2 more)
.codex-tmp/: exe-projects-login-smoke.json  exe-serverfix-login-smoke.json  login-helper-final-3.json
.codex-tmp/exe-projects-webview/session-63700-1781798925/EBWebView/: CrashpadMetrics-active.pma  Local State
.codex-tmp/exe-projects-webview/session-63700-1781798925/EBWebView/BrowserMetrics/: BrowserMetrics-6A34180F-8468.pma
.codex-tmp/exe-projects-webview/session-63700-1781798925/EBWebView/Crashpad/: metadata  watson_metadata
.codex-tmp/exe-projects-webview/session-63700-1781798925/EBWebView/Crashpad/reports/: 9c25b48e-a34c-4589-bebb-120cf226665d.dmp
.codex-tmp/exe-projects-webview/session-63700-1781798925/EBWebView/Default/: Preferences  Secure Preferences
.codex-tmp/exe-projects-webview/session-63700-1781798925/EBWebView/Default/Code Cache/js/index-dir/: the-real-index
.codex-tmp/exe-projects-webview/session-63700-1781798925/EBWebView/Default/Extension Rules/: LOG
.codex-tmp/exe-projects-webview/session-63700-1781798925/EBWebView/Default/Site Characteristics Database/: LOG
.codex-tmp/exe-projects-webview/session-63700-1781798925/EBWebView/Default/Sync Data/LevelDB/: LOG
.codex-tmp/exe-projects-webview/session-63700-1781798925/EBWebView/ShaderCache/: index
.codex-tmp/exe-serverfix-webview/session-50952-1781797622/EBWebView/: CrashpadMetrics-active.pma  Local State
.codex-tmp/exe-serverfix-webview/session-50952-1781797622/EBWebView/BrowserMetrics/: BrowserMetrics-6A3412F9-B4A4.pma
.codex-tmp/exe-serverfix-webview/session-50952-1781797622/EBWebView/Default/: Preferences  Secure Preferences
.codex-tmp/exe-serverfix-webview/session-50952-1781797622/EBWebView/Default/Code Cache/wasm/index-dir/: the-real-index
.codex-tmp/exe-serverfix-webview/session-50952-1781797622/EBWebView/Default/Extension Rules/: LOG
.codex-tmp/exe-serverfix-webview/session-50952-1781797622/EBWebView/Default/Site Characteristics Database/: LOG
.codex-tmp/exe-serverfix-webview/session-50952-1781797622/EBWebView/Default/Sync Data/LevelDB/: LOG
.codex-tmp/exe-serverfix-webview/session-50952-1781797622/EBWebView/ShaderCache/: index
.codex-tmp/service-manager-appdata/LanhuMCP/: accounts.json
.codex-tmp/service-manager-appdata2/LanhuMCP/: accounts.json
.codex-tmp/webview-final-3/session-41732-1781801299/EBWebView/: CrashpadMetrics-active.pma  Local State
.codex-tmp/webview-final-3/session-41732-1781801299/EBWebView/BrowserMetrics/: BrowserMetrics-6A342156-75D8.pma
.codex-tmp/webview-final-3/session-41732-1781801299/EBWebView/Crashpad/: watson_metadata
.codex-tmp/webview-final-3/session-41732-1781801299/EBWebView/Default/: Preferences  Secure Preferences
.codex-tmp/webview-final-3/session-41732-1781801299/EBWebView/Default/Code Cache/js/index-dir/: the-real-index
.codex-tmp/webview-final-3/session-41732-1781801299/EBWebView/Default/Code Cache/wasm/index-dir/: the-real-index
.codex-tmp/webview-final-3/session-41732-1781801299/EBWebView/Default/Extension Rules/: LOG
.codex-tmp/webview-final-3/session-41732-1781801299/EBWebView/Default/Site Characteristics Database/: LOG
.codex-tmp/webview-final-3/session-41732-1781801299/EBWebView/Default/Sync Data/LevelDB/: LOG
.codex-tmp/webview-final-3/session-41732-1781801299/EBWebView/EBWebViewMetrics/: EBWebViewMetrics-6A342158-A304.pma
.codex-tmp/webview-final-3/session-41732-1781801299/EBWebView/ShaderCache/: index
.github/workflows/: ci.yml
.mimocode/plans/: 1781700397294-glowing-pixel.md
lanhu_mcp/: __init__.py  server.py
lanhu_mcp/codegen/: __init__.py  dependency_detector.py  fidelity_check.py  incremental_gen.py  interaction.py  ir.py  mcp_tools.py  pipeline.py  project_scaffolder.py  semantic.py  style_system.py
lanhu_mcp/codegen/frameworks/: flutter_gen.py  html_gen.py  react_gen.py  svelte_gen.py  vue_gen.py
lanhu_mcp/core/: accounts.py  avatar.py  errors.py  messages.py  paths.py  projects.py  user.py
lanhu_mcp/gui/: __init__.py  __main__.py  app.py  state.py  theme.py
lanhu_mcp/gui/components/: __init__.py  widgets.py
lanhu_mcp/gui/pages/: __init__.py  accounts.py  designs.py  ide_tools.py  logs.py  overview.py  projects.py  service.py
lanhu_mcp/services/: __init__.py  ide_config.py  lanhu_api.py  login_helper.py  service_manager.py  tools_registry.py
lanhu_mcp/tools/: annotations.py  batch_download.py  code_gen.py  compare.py  components.py  design_system.py  interactions.py  layout_spec.py  quality_check.py  responsive.py  svg_extract.py  version_history.py
tests/: test_account_cookie_expiry.py  test_codegen_registration.py  test_codegen_smoke.py  test_errors.py  test_gui_comprehensive.py  test_gui_optimizations.py  test_login_helper_smoke.py  test_messages.py  test_product_documents.py  test_recent_projects.py
