[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lanhu-mcp-server"
version = "1.0.0"
description = "A powerful MCP server for automatically extracting and analyzing Lanhu design documents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lanhu MCP Team", email = "dsphper@gmail.com"}
]
maintainers = [
    {name = "Lanhu MCP Team", email = "dsphper@gmail.com"}
]
keywords = [
    "mcp",
    "model-context-protocol",
    "lanhu",
    "axure",
    "design",
    "prototype",
    "ai",
    "collaboration",
    "requirements-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.48.0",
    "lxml>=5.0.0",
    "python-dotenv>=1.0.0",
    "htmlmin2>=0.1.12",
    "mcp[cli]>=1.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
gui = [
    "flet==0.28.3",
    "pywebview>=5.0",
    "Pillow>=10.0.0",
    "pystray>=0.19.0",
]
build = [
    "pyinstaller>=6.0.0",
]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
security = [
    "bandit>=1.7.5",
    "safety>=2.3.5",
]
all = [
    "lanhu-mcp-server[gui,build,dev,security]",
]

[project.urls]
Homepage = "https://github.com/dsphper/lanhu-mcp"
Documentation = "https://github.com/dsphper/lanhu-mcp#readme"
Repository = "https://github.com/dsphper/lanhu-mcp"
"Bug Tracker" = "https://github.com/dsphper/lanhu-mcp/issues"
Changelog = "https://github.com/dsphper/lanhu-mcp/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/dsphper/lanhu-mcp"

[project.scripts]
lanhu-mcp = "lanhu_mcp_server:main"
lanhu-mcp-gui = "lanhu_mcp_gui:create_gui"
lanhu-mcp-setup = "lanhu_mcp_app:main"

[tool.setuptools]
py-modules = ["lanhu_mcp_server", "lanhu_mcp_gui", "lanhu_mcp_app", "lanhu_login_helper"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lanhu_mcp*", "lanhu_mcp_server*"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "dist2",
    "data",
    "logs",
]

[tool.ruff.lint]
# Conservative first pass for a legacy codebase: correctness + import hygiene,
# not style churn. Expand later once the monolith is split further.
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # keep long MCP descriptions untouched for now
    "B008",  # FastMCP uses Annotated defaults in tool signatures
    "B904",  # gradual exception chaining cleanup
]

[tool.ruff.lint.per-file-ignores]
"lanhu_mcp_server.py" = ["E402", "F401", "F811", "B007"]
"lanhu_mcp_gui.py" = ["E402", "F401", "F811", "B007"]
"tests/*.py" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = false
disallow_untyped_defs = false
no_implicit_optional = false
exclude = "^(build|dist|dist2|data|logs|tests)/"

[[tool.mypy.overrides]]
module = [
    "lanhu_mcp.core.*",
    "lanhu_mcp.services.*",
]
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=. --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    "*/site-packages/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", "data", "logs"]
skips = ["B101", "B601"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    "venv",
    "data",
    "logs",
]
max-complexity = 10

